--- a/package.json
+++ b/package.json
@@ -22,17 +22,23 @@
   "dependencies": {
     "@nestjs/common": "^7.1.1",
     "@nestjs/core": "^7.1.1",
+    "@nestjs/mongoose": "^7.0.2",
     "@nestjs/platform-express": "^7.1.1",
+    "@nestjs/swagger": "^4.5.12",
+    "axios": "^0.19.2",
+    "mongoose": "^5.9.27",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.5"
+    "rxjs": "^6.5.5",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.2.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.1.1",
-    "@types/express": "^4.17.6",
+    "@types/express": "^4.17.7",
     "@types/jest": "^25.2.3",
+    "@types/mongoose": "^5.7.34",
     "@types/node": "^14.0.6",
     "@types/supertest": "^2.0.9",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
@@ -41,6 +47,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
     "jest": "^26.0.1",
+    "npm": "^6.14.7",
     "prettier": "^2.0.5",
     "supertest": "^4.0.2",
     "ts-jest": "^26.1.0",
